# SAND-PHYSICS

./: .gitignore  CMakeLists.txt  README.md  setup.sh
condor_submission/executables/: AnalyseDigit.sh  AnalyseEDepSim.sh
condor_submission/logs/: AnalyseDigit.err  AnalyseDigit.out
condor_submission/sub_files/: AnalyseDigit.sub  AnalyseEDepSim.sub
include/: EDepSimUtils.h  GenieUtils.h  GeoUtils.h  RDataFrameUtils.h  RDataFrameUtilsLinkDef.h  RecoUtils.h  SandRecoUtils.h
notebook/: AnalyseDriftReco.ipynb  AnalyseECALDigit.ipynb  AnalyseEDepSim.ipynb  AnalyseGenie.ipynb  ProductionFirstPlots.py  SelectedSignal.ipynb  SignalChannelAnalysis.py
notebook/python_tools/: MultiPlotter.py  ROOT2Pandas.py  ROOT_tools.py  SampleManager.py
production_antinumucc/antinumu_CCQE_on_H_like/: Unfold.cpp
production_antinumucc/antinumu_CCQE_on_H_like/preunfold/: efficiency_plots.cpp  make_plots.cpp
production_antinumucc_01/scripts/: check_neutrons_edep_.root  checks_on_neutrons.cpp  efficiency_plots.cpp  efficiency_plots_test.cpp  fast_check.cpp  run_analysis.sh  unfold_decri.cpp  unfold_file.root
production_spill_reverse_volSAND/SAND_opt3_DRIFT1_reverse_volSAND/: AnalyseSpillTrajectories.ipynb
scripts/: Merge_productions_files.sh  convert_2_pandas.py  display_event.py
src/: AnalyseDigitize.cpp  AnalyseDriftReco.cpp  AnalyseEDepSim.cpp  AnalyseFastReco.cpp  AnalyseGenie.cpp  AnalyseSandReco.cpp  AnalyseSpill.cpp  GenieUtils.cpp  GeoUtils.cpp  Get_graphite_polyp_mass_ratio.cpp  RDataFrameUtils.cpp  RecoUtils.cpp  SandRecoUtils.cpp  SelectSignal.cpp  Unfold.cpp
